# charmonium.freeze

./: .gitignore  LICENSE  README.rst  cookiecutter_replay.json  flake.nix  hashes.json  mypy.ini  pylintrc  pyproject.toml  script.py
.github/workflows/: main.yaml
charmonium/freeze/: __init__.py  config.py  freeze_basic.py  freeze_code.py  freeze_files.py  freeze_function.py  freeze_objects.py  freeze_thirdparty.py  freeze_type.py  lib.py  summarize_diff.py  util.py
stubs/: mpld3.pyi  tqdm.pyi
stubs/matplotlib/: figure.pyi  transforms.pyi
stubs/pandas/: __init__.pyi
tests/: frozen-CPython-310.pkl  frozen-CPython-38.pkl  frozen-CPython-39.pkl  module_example.py  obj_test_cases.py  test_benchmark.py  test_freeze.py  test_summarize_diff.py  test_util.py
utils/: annotate_logs.py  compile_test.txt
