[tool.poetry]
name = "charmonium.freeze"
version = "0.8.3"
description = "Injectively, deterministically maps arbitrary objects to hashable values"
authors = ["Samuel Grayson <sam+dev@samgrayson.me>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/charmoniumQ/charmonium.freeze"


packages = [
	{ include = "charmonium" },
]

keywords = ["freeze", "hash"]
classifiers = [
	"Operating System :: OS Independent",
	"Typing :: Typed",
	"Natural Language :: English",
	"Development Status :: 4 - Beta","Intended Audience :: Developers","Topic :: Software Development :: Libraries :: Python Modules",
]
[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--quiet --numprocesses=0 --doctest-glob='*.rst' --doctest-modules --benchmark-disable --durations=20"
# pytest --benchmark-enable --benchmark-storage=build/benchmark --benchmark-only --numprocesses 0

[tool.coverage.run]
branch = true
data_file = "build/.coverage"

[tool.coverage.html]
directory = "build/htmlcov"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'if self\.debug',
    'raise .*Error',
    'if False:',
    'if __name__ == .__main__.:',
	'if TYPE_CHECKING',
    '@(abc\.)?abstractmethod',
    '\w*\.\.\.$',
    '\w*pass$',
]

[tool.mypy]
strict = true
pretty = true
error_summary = true
color_output = true
mypy_path = "stubs"
disable_error_code = "no-redef"

[tool.bump2version]
current_version = "0.8.3"
commit = true
tag = true

[tool.tox]
legacy_tox_ini = """
[tox]
# Unfortunately, matplotlib requires Pillow which doesn't work in pypy38.
envlist = py{38,39,310}
# Make sure to install the Python versions listed here in the Nix flake.
isolated_build = True

[testenv]
allowlist_externals = poetry, {env:PWD}/script.py
skip_install = true
commands =
    poetry install
    {toxinidir}/script.py per-env-tests
"""


[tool.poetry.dev-dependencies]
autoimport = "^0.7.5"
isort = "^5.10.0"
black = "^22.3"
mypy = "^0.991"
pytest = "^7.2"
pytest-xdist = "^3.2"
pytest-cov = "^4.0"
coverage = "^6.1.2"
tox = "^4.0"
radon = "^5.1.0"
twine = "^3.5.0"
proselint = "^0.13.0"
rstcheck = "^3.3.1"
bump2version = "^1.0.1"
"charmonium.async-subprocess" = "^0.1.7"
typer = "^0.4.0"
termcolor = "^1.1.0"
typing-extensions = "^4.1.1"
ipython = "^8.10"
ipdb = "^0.13.9"
types-setuptools = "^57.4.10"
types-toml = "^0.10.4"
types-termcolor = "^1.1.3"
# rest
matplotlib = "^3.5.1"
pandas = "^1.4.1"
numpy = "^1.22.3"
icecream = "^2.1.2"
autoflake = "^1.7.7"
ruff = "^0.0.253"
pylint = "^2.16.2"
pytest-benchmark = "^4.0.0"

[tool.poetry.dependencies]
python = "^3.8"
# make sure to keep the Python versions here consistent with those tested by Tox (tool.tox.legacy_tox_ini.tox.envlist).

